test/spec_vectors/simd_i8x16_arith2/fail/module_11.wat
(module (func (result v128) (i8x16.avgr_u (i32.const 0) (f32.const 0.0))))